// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FacebookPreview Component matches the snapshot for a faulty image 1`] = `
.c5 {
  color: #606770;
  font-size: 12px;
  line-height: 11px;
  text-transform: uppercase;
  overflow: hidden;
}

.c4 {
  color: #606770;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-size: 12px;
  line-height: 16px;
  overflow: hidden;
  padding: 0;
  text-overflow: ellipsis;
  text-transform: uppercase;
  white-space: nowrap;
  margin: 0;
  position: static;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  width: 500px;
  height: 261px;
  max-width: 100%;
  margin: 0;
  padding: 1em;
  text-align: center;
  font-size: 1rem;
  color: #fff;
  background-color: #dc3232;
}

.c7 {
  display: block;
  color: #1d2129;
  font-weight: 600;
  overflow: hidden;
  font-size: 16px;
  line-height: 20px;
  margin: 5px 0 0;
  max-height: 100px;
  word-wrap: break-word;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  white-space: normal;
  cursor: pointer;
}

.c8 {
  color: #606770;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-size: 12px;
  line-height: 16px;
  overflow: hidden;
  padding: 0;
  text-overflow: ellipsis;
  text-transform: uppercase;
  white-space: nowrap;
  margin: 3px 0 0 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  background-color: #f2f3f5;
  max-width: none;
  border: none;
  box-shadow: none;
  border: 1px solid #dddfe2;
  border-radius: 0;
  zoom: 1;
  overflow: hidden;
  position: relative;
  z-index: 0;
  width: 500px;
}

.c2 {
  background-color: #f2f3f5;
  margin: 0;
  padding: 10px 12px;
  position: relative;
  border-bottom: 1px solid #dddfe2;
  border-top: 1px solid #dddfe2;
  width: 474px;
  height: 57px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 136px;
  font-size: 12px;
  margin: 0;
  max-height: 190px;
}

.c6 {
  max-height: 46px;
  overflow: hidden;
}

<div
  className="c0"
  mode={null}
>
  <div
    className="c1"
  >
    The given image url cannot be loaded
  </div>
  <div
    className="c2"
    mode={null}
  >
    <div
      className="c3"
    >
      <span
        className="screen-reader-text"
      >
        yoast.com
      </span>
      <p
        aria-hidden="true"
        className="c4"
      >
        <span
          className="c5"
        >
          yoast.com
        </span>
      </p>
      <div
        className="c6"
      >
        <span
          className="c7"
        >
          yoast test
        </span>
        <p
          className="c8"
        >
          
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`FacebookPreview Component matches the snapshot for a landscape image 1`] = `
.c6 {
  color: #606770;
  font-size: 12px;
  line-height: 11px;
  text-transform: uppercase;
  overflow: hidden;
}

.c5 {
  color: #606770;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-size: 12px;
  line-height: 16px;
  overflow: hidden;
  padding: 0;
  text-overflow: ellipsis;
  text-transform: uppercase;
  white-space: nowrap;
  margin: 0;
  position: static;
}

.c1 {
  position: relative;
  height: 261px;
  width: 500px;
  overflow: hidden;
  background-color: #fff;
}

.c2 {
  width: 600px;
  height: 300px;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c8 {
  display: block;
  color: #1d2129;
  font-weight: 600;
  overflow: hidden;
  font-size: 16px;
  line-height: 20px;
  margin: 5px 0 0;
  max-height: 100px;
  word-wrap: break-word;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  white-space: normal;
  cursor: pointer;
}

.c9 {
  color: #606770;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-size: 12px;
  line-height: 16px;
  overflow: hidden;
  padding: 0;
  text-overflow: ellipsis;
  text-transform: uppercase;
  white-space: nowrap;
  margin: 3px 0 0 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #f2f3f5;
  max-width: none;
  border: none;
  box-shadow: none;
  border: 1px solid #dddfe2;
  border-radius: 0;
  zoom: 1;
  overflow: hidden;
  position: relative;
  z-index: 0;
  width: 500px;
}

.c3 {
  background-color: #f2f3f5;
  margin: 0;
  padding: 10px 12px;
  position: relative;
  border: 1px solid #dddfe2;
  width: 474px;
  height: 57px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 136px;
  font-size: 12px;
  margin: 0;
  max-height: 190px;
}

.c7 {
  max-height: 46px;
  overflow: hidden;
}

<div
  className="c0"
  mode="landscape"
>
  <div
    className="c1"
  >
    <img
      alt=""
      className="c2"
      src="https://yoast.com/app/uploads/2015/06/How_to_choose_keywords_FI.png"
    />
  </div>
  <div
    className="c3"
    mode="landscape"
  >
    <div
      className="c4"
    >
      <span
        className="screen-reader-text"
      >
        yoast.com
      </span>
      <p
        aria-hidden="true"
        className="c5"
      >
        <span
          className="c6"
        >
          yoast.com
        </span>
      </p>
      <div
        className="c7"
      >
        <span
          className="c8"
        >
          yoast test
        </span>
        <p
          className="c9"
        >
          
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`FacebookPreview Component matches the snapshot for a portrait image 1`] = `
.c6 {
  color: #606770;
  font-size: 12px;
  line-height: 11px;
  text-transform: uppercase;
  overflow: hidden;
}

.c5 {
  color: #606770;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-size: 12px;
  line-height: 16px;
  overflow: hidden;
  padding: 0;
  text-overflow: ellipsis;
  text-transform: uppercase;
  white-space: nowrap;
  margin: 0;
  position: static;
}

.c1 {
  position: relative;
  height: 236px;
  width: 158px;
  overflow: hidden;
  background-color: #fff;
}

.c2 {
  width: 300px;
  height: 600px;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c8 {
  display: block;
  color: #1d2129;
  font-weight: 600;
  overflow: hidden;
  font-size: 16px;
  line-height: 20px;
  margin: 5px 0 0;
  max-height: 100px;
  word-wrap: break-word;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  white-space: normal;
  cursor: pointer;
}

.c9 {
  color: #606770;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-size: 12px;
  line-height: 16px;
  overflow: hidden;
  padding: 0;
  text-overflow: ellipsis;
  text-transform: uppercase;
  white-space: nowrap;
  margin: 3px 0 0 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  background-color: #f2f3f5;
  max-width: none;
  border: none;
  box-shadow: none;
  border: 1px solid #dddfe2;
  border-radius: 0;
  zoom: 1;
  overflow: hidden;
  position: relative;
  z-index: 0;
  width: 500px;
}

.c3 {
  background-color: #f2f3f5;
  margin: 0;
  padding: 10px 12px;
  position: relative;
  border-bottom: 1px solid #dddfe2;
  border-top: 1px solid #dddfe2;
  width: 318px;
  height: 215px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 136px;
  font-size: 12px;
  margin: 0;
  max-height: 190px;
}

.c7 {
  max-height: 46px;
  overflow: hidden;
}

<div
  className="c0"
  mode="portrait"
>
  <div
    className="c1"
  >
    <img
      alt=""
      className="c2"
      src="https://yoast.com/app/uploads/2015/09/Author_Joost_x2.png"
    />
  </div>
  <div
    className="c3"
    mode="portrait"
  >
    <div
      className="c4"
    >
      <span
        className="screen-reader-text"
      >
        yoast.com
      </span>
      <p
        aria-hidden="true"
        className="c5"
      >
        <span
          className="c6"
        >
          yoast.com
        </span>
      </p>
      <div
        className="c7"
      >
        <span
          className="c8"
        >
          yoast test
        </span>
        <p
          className="c9"
        >
          
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`FacebookPreview Component matches the snapshot for a square image 1`] = `
.c6 {
  color: #606770;
  font-size: 12px;
  line-height: 11px;
  text-transform: uppercase;
  overflow: hidden;
}

.c5 {
  color: #606770;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-size: 12px;
  line-height: 16px;
  overflow: hidden;
  padding: 0;
  text-overflow: ellipsis;
  text-transform: uppercase;
  white-space: nowrap;
  margin: 0;
  position: static;
}

.c1 {
  position: relative;
  height: 158px;
  width: 158px;
  overflow: hidden;
  background-color: #fff;
}

.c2 {
  width: 300px;
  height: 300px;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c8 {
  display: block;
  color: #1d2129;
  font-weight: 600;
  overflow: hidden;
  font-size: 16px;
  line-height: 20px;
  margin: 5px 0 0;
  max-height: 100px;
  word-wrap: break-word;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  white-space: normal;
  cursor: pointer;
}

.c9 {
  color: #606770;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-size: 12px;
  line-height: 16px;
  overflow: hidden;
  padding: 0;
  text-overflow: ellipsis;
  text-transform: uppercase;
  white-space: nowrap;
  margin: 3px 0 0 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  background-color: #f2f3f5;
  max-width: none;
  border: none;
  box-shadow: none;
  border: 1px solid #dddfe2;
  border-radius: 0;
  zoom: 1;
  overflow: hidden;
  position: relative;
  z-index: 0;
  width: 500px;
}

.c3 {
  background-color: #f2f3f5;
  margin: 0;
  padding: 10px 12px;
  position: relative;
  border-bottom: 1px solid #dddfe2;
  border-top: 1px solid #dddfe2;
  width: 318px;
  height: 136px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 136px;
  font-size: 12px;
  margin: 0;
  max-height: 190px;
}

.c7 {
  max-height: 46px;
  overflow: hidden;
}

<div
  className="c0"
  mode="square"
>
  <div
    className="c1"
  >
    <img
      alt=""
      className="c2"
      src="https://yoast.com/app/uploads/2018/09/avatar_user_1_1537774226.png"
    />
  </div>
  <div
    className="c3"
    mode="square"
  >
    <div
      className="c4"
    >
      <span
        className="screen-reader-text"
      >
        yoast.com
      </span>
      <p
        aria-hidden="true"
        className="c5"
      >
        <span
          className="c6"
        >
          yoast.com
        </span>
      </p>
      <div
        className="c7"
      >
        <span
          className="c8"
        >
          yoast test
        </span>
        <p
          className="c9"
        >
          
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`FacebookPreview Component matches the snapshot for a too small image 1`] = `
.c5 {
  color: #606770;
  font-size: 12px;
  line-height: 11px;
  text-transform: uppercase;
  overflow: hidden;
}

.c4 {
  color: #606770;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-size: 12px;
  line-height: 16px;
  overflow: hidden;
  padding: 0;
  text-overflow: ellipsis;
  text-transform: uppercase;
  white-space: nowrap;
  margin: 0;
  position: static;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  width: 500px;
  height: 261px;
  max-width: 100%;
  margin: 0;
  padding: 1em;
  text-align: center;
  font-size: 1rem;
  color: #fff;
  background-color: #dc3232;
}

.c7 {
  display: block;
  color: #1d2129;
  font-weight: 600;
  overflow: hidden;
  font-size: 16px;
  line-height: 20px;
  margin: 5px 0 0;
  max-height: 100px;
  word-wrap: break-word;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  white-space: normal;
  cursor: pointer;
}

.c8 {
  color: #606770;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-size: 12px;
  line-height: 16px;
  overflow: hidden;
  padding: 0;
  text-overflow: ellipsis;
  text-transform: uppercase;
  white-space: nowrap;
  margin: 3px 0 0 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  background-color: #f2f3f5;
  max-width: none;
  border: none;
  box-shadow: none;
  border: 1px solid #dddfe2;
  border-radius: 0;
  zoom: 1;
  overflow: hidden;
  position: relative;
  z-index: 0;
  width: 500px;
}

.c2 {
  background-color: #f2f3f5;
  margin: 0;
  padding: 10px 12px;
  position: relative;
  border-bottom: 1px solid #dddfe2;
  border-top: 1px solid #dddfe2;
  width: 318px;
  height: 136px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 136px;
  font-size: 12px;
  margin: 0;
  max-height: 190px;
}

.c6 {
  max-height: 46px;
  overflow: hidden;
}

<div
  className="c0"
  mode="square"
>
  <div
    className="c1"
  >
    The image you selected is too small for Facebook
  </div>
  <div
    className="c2"
    mode="square"
  >
    <div
      className="c3"
    >
      <span
        className="screen-reader-text"
      >
        yoast.com
      </span>
      <p
        aria-hidden="true"
        className="c4"
      >
        <span
          className="c5"
        >
          yoast.com
        </span>
      </p>
      <div
        className="c6"
      >
        <span
          className="c7"
        >
          yoast test
        </span>
        <p
          className="c8"
        >
          
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`FacebookPreview Component matches the snapshot in the loading state 1`] = `
.c5 {
  color: #606770;
  font-size: 12px;
  line-height: 11px;
  text-transform: uppercase;
  overflow: hidden;
}

.c4 {
  color: #606770;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-size: 12px;
  line-height: 16px;
  overflow: hidden;
  padding: 0;
  text-overflow: ellipsis;
  text-transform: uppercase;
  white-space: nowrap;
  margin: 0;
  position: static;
}

.c1 {
  width: 500px;
  height: 261px;
  background-color: #ddd;
  border-style: dashed;
  border-width: 2px;
  color: #073cba;
  background-color: #f1f1f1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  display: block;
  color: #1d2129;
  font-weight: 600;
  overflow: hidden;
  font-size: 16px;
  line-height: 20px;
  margin: 5px 0 0;
  max-height: 100px;
  word-wrap: break-word;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  white-space: normal;
  cursor: pointer;
}

.c8 {
  color: #606770;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-size: 12px;
  line-height: 16px;
  overflow: hidden;
  padding: 0;
  text-overflow: ellipsis;
  text-transform: uppercase;
  white-space: nowrap;
  margin: 3px 0 0 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  background-color: #f2f3f5;
  max-width: none;
  border: none;
  box-shadow: none;
  border: 1px solid #dddfe2;
  border-radius: 0;
  zoom: 1;
  overflow: hidden;
  position: relative;
  z-index: 0;
  width: 500px;
}

.c2 {
  background-color: #f2f3f5;
  margin: 0;
  padding: 10px 12px;
  position: relative;
  border-bottom: 1px solid #dddfe2;
  border-top: 1px solid #dddfe2;
  width: 474px;
  height: 57px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 136px;
  font-size: 12px;
  margin: 0;
  max-height: 190px;
}

.c6 {
  max-height: 46px;
  overflow: hidden;
}

<div
  className="c0"
  mode={null}
>
  <div
    className="c1"
  >
    Select image
  </div>
  <div
    className="c2"
    mode={null}
  >
    <div
      className="c3"
    >
      <span
        className="screen-reader-text"
      >
        yoast.com
      </span>
      <p
        aria-hidden="true"
        className="c4"
      >
        <span
          className="c5"
        >
          yoast.com
        </span>
      </p>
      <div
        className="c6"
      >
        <span
          className="c7"
        >
          yoast test
        </span>
        <p
          className="c8"
        >
          
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`FacebookPreview matches the snapshot for a faulty image 1`] = `
.c5 {
  color: #606770;
  font-size: 12px;
  line-height: 11px;
  text-transform: uppercase;
  overflow: hidden;
}

.c4 {
  color: #606770;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-size: 12px;
  line-height: 16px;
  overflow: hidden;
  padding: 0;
  text-overflow: ellipsis;
  text-transform: uppercase;
  white-space: nowrap;
  margin: 0;
  position: static;
}

.c1 {
  width: 500px;
  height: 261px;
  background-color: #ddd;
  border-style: dashed;
  border-width: 2px;
  color: #073cba;
  background-color: #f1f1f1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  display: block;
  color: #1d2129;
  font-weight: 600;
  overflow: hidden;
  font-size: 16px;
  line-height: 20px;
  margin: 5px 0 0;
  max-height: 100px;
  word-wrap: break-word;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  white-space: normal;
  cursor: pointer;
}

.c8 {
  color: #606770;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-size: 12px;
  line-height: 16px;
  overflow: hidden;
  padding: 0;
  text-overflow: ellipsis;
  text-transform: uppercase;
  white-space: nowrap;
  margin: 3px 0 0 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  background-color: #f2f3f5;
  max-width: none;
  border: none;
  box-shadow: none;
  border: 1px solid #dddfe2;
  border-radius: 0;
  zoom: 1;
  overflow: hidden;
  position: relative;
  z-index: 0;
  width: 500px;
}

.c2 {
  background-color: #f2f3f5;
  margin: 0;
  padding: 10px 12px;
  position: relative;
  border-bottom: 1px solid #dddfe2;
  border-top: 1px solid #dddfe2;
  width: 474px;
  height: 57px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 136px;
  font-size: 12px;
  margin: 0;
  max-height: 190px;
}

.c6 {
  max-height: 46px;
  overflow: hidden;
}

<div
  className="c0"
  mode={null}
>
  <div
    className="c1"
  >
    Select image
  </div>
  <div
    className="c2"
    mode={null}
  >
    <div
      className="c3"
    >
      <span
        className="screen-reader-text"
      >
        yoast.com
      </span>
      <p
        aria-hidden="true"
        className="c4"
      >
        <span
          className="c5"
        >
          yoast.com
        </span>
      </p>
      <div
        className="c6"
      >
        <span
          className="c7"
        >
          YoastCon Workshops
        </span>
        <p
          className="c8"
        >
          Description to go along with a faulty image.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`FacebookPreview matches the snapshot for a landscape image 1`] = `
.c5 {
  color: #606770;
  font-size: 12px;
  line-height: 11px;
  text-transform: uppercase;
  overflow: hidden;
}

.c4 {
  color: #606770;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-size: 12px;
  line-height: 16px;
  overflow: hidden;
  padding: 0;
  text-overflow: ellipsis;
  text-transform: uppercase;
  white-space: nowrap;
  margin: 0;
  position: static;
}

.c1 {
  width: 500px;
  height: 261px;
  background-color: #ddd;
  border-style: dashed;
  border-width: 2px;
  color: #073cba;
  background-color: #f1f1f1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  display: block;
  color: #1d2129;
  font-weight: 600;
  overflow: hidden;
  font-size: 16px;
  line-height: 20px;
  margin: 5px 0 0;
  max-height: 100px;
  word-wrap: break-word;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  white-space: normal;
  cursor: pointer;
}

.c8 {
  color: #606770;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-size: 12px;
  line-height: 16px;
  overflow: hidden;
  padding: 0;
  text-overflow: ellipsis;
  text-transform: uppercase;
  white-space: nowrap;
  margin: 3px 0 0 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  background-color: #f2f3f5;
  max-width: none;
  border: none;
  box-shadow: none;
  border: 1px solid #dddfe2;
  border-radius: 0;
  zoom: 1;
  overflow: hidden;
  position: relative;
  z-index: 0;
  width: 500px;
}

.c2 {
  background-color: #f2f3f5;
  margin: 0;
  padding: 10px 12px;
  position: relative;
  border-bottom: 1px solid #dddfe2;
  border-top: 1px solid #dddfe2;
  width: 474px;
  height: 57px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 136px;
  font-size: 12px;
  margin: 0;
  max-height: 190px;
}

.c6 {
  max-height: 46px;
  overflow: hidden;
}

<div
  className="c0"
  mode={null}
>
  <div
    className="c1"
  >
    Select image
  </div>
  <div
    className="c2"
    mode={null}
  >
    <div
      className="c3"
    >
      <span
        className="screen-reader-text"
      >
        yoast.com
      </span>
      <p
        aria-hidden="true"
        className="c4"
      >
        <span
          className="c5"
        >
          yoast.com
        </span>
      </p>
      <div
        className="c6"
      >
        <span
          className="c7"
        >
          YoastCon Workshops
        </span>
        <p
          className="c8"
        >
          Description to go along with a landscape image.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`FacebookPreview matches the snapshot for a portrait image 1`] = `
.c5 {
  color: #606770;
  font-size: 12px;
  line-height: 11px;
  text-transform: uppercase;
  overflow: hidden;
}

.c4 {
  color: #606770;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-size: 12px;
  line-height: 16px;
  overflow: hidden;
  padding: 0;
  text-overflow: ellipsis;
  text-transform: uppercase;
  white-space: nowrap;
  margin: 0;
  position: static;
}

.c1 {
  width: 500px;
  height: 261px;
  background-color: #ddd;
  border-style: dashed;
  border-width: 2px;
  color: #073cba;
  background-color: #f1f1f1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  display: block;
  color: #1d2129;
  font-weight: 600;
  overflow: hidden;
  font-size: 16px;
  line-height: 20px;
  margin: 5px 0 0;
  max-height: 100px;
  word-wrap: break-word;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  white-space: normal;
  cursor: pointer;
}

.c8 {
  color: #606770;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-size: 12px;
  line-height: 16px;
  overflow: hidden;
  padding: 0;
  text-overflow: ellipsis;
  text-transform: uppercase;
  white-space: nowrap;
  margin: 3px 0 0 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  background-color: #f2f3f5;
  max-width: none;
  border: none;
  box-shadow: none;
  border: 1px solid #dddfe2;
  border-radius: 0;
  zoom: 1;
  overflow: hidden;
  position: relative;
  z-index: 0;
  width: 500px;
}

.c2 {
  background-color: #f2f3f5;
  margin: 0;
  padding: 10px 12px;
  position: relative;
  border-bottom: 1px solid #dddfe2;
  border-top: 1px solid #dddfe2;
  width: 474px;
  height: 57px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 136px;
  font-size: 12px;
  margin: 0;
  max-height: 190px;
}

.c6 {
  max-height: 46px;
  overflow: hidden;
}

<div
  className="c0"
  mode={null}
>
  <div
    className="c1"
  >
    Select image
  </div>
  <div
    className="c2"
    mode={null}
  >
    <div
      className="c3"
    >
      <span
        className="screen-reader-text"
      >
        yoast.com
      </span>
      <p
        aria-hidden="true"
        className="c4"
      >
        <span
          className="c5"
        >
          yoast.com
        </span>
      </p>
      <div
        className="c6"
      >
        <span
          className="c7"
        >
          YoastCon Workshops
        </span>
        <p
          className="c8"
        >
          Description to go along with a portrait image.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`FacebookPreview matches the snapshot for a square image 1`] = `
.c5 {
  color: #606770;
  font-size: 12px;
  line-height: 11px;
  text-transform: uppercase;
  overflow: hidden;
}

.c4 {
  color: #606770;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-size: 12px;
  line-height: 16px;
  overflow: hidden;
  padding: 0;
  text-overflow: ellipsis;
  text-transform: uppercase;
  white-space: nowrap;
  margin: 0;
  position: static;
}

.c1 {
  width: 500px;
  height: 261px;
  background-color: #ddd;
  border-style: dashed;
  border-width: 2px;
  color: #073cba;
  background-color: #f1f1f1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  display: block;
  color: #1d2129;
  font-weight: 600;
  overflow: hidden;
  font-size: 16px;
  line-height: 20px;
  margin: 5px 0 0;
  max-height: 100px;
  word-wrap: break-word;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  white-space: normal;
  cursor: pointer;
}

.c8 {
  color: #606770;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-size: 12px;
  line-height: 16px;
  overflow: hidden;
  padding: 0;
  text-overflow: ellipsis;
  text-transform: uppercase;
  white-space: nowrap;
  margin: 3px 0 0 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  background-color: #f2f3f5;
  max-width: none;
  border: none;
  box-shadow: none;
  border: 1px solid #dddfe2;
  border-radius: 0;
  zoom: 1;
  overflow: hidden;
  position: relative;
  z-index: 0;
  width: 500px;
}

.c2 {
  background-color: #f2f3f5;
  margin: 0;
  padding: 10px 12px;
  position: relative;
  border-bottom: 1px solid #dddfe2;
  border-top: 1px solid #dddfe2;
  width: 474px;
  height: 57px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 136px;
  font-size: 12px;
  margin: 0;
  max-height: 190px;
}

.c6 {
  max-height: 46px;
  overflow: hidden;
}

<div
  className="c0"
  mode={null}
>
  <div
    className="c1"
  >
    Select image
  </div>
  <div
    className="c2"
    mode={null}
  >
    <div
      className="c3"
    >
      <span
        className="screen-reader-text"
      >
        yoast.com
      </span>
      <p
        aria-hidden="true"
        className="c4"
      >
        <span
          className="c5"
        >
          yoast.com
        </span>
      </p>
      <div
        className="c6"
      >
        <span
          className="c7"
        >
          YoastCon Workshops
        </span>
        <p
          className="c8"
        >
          Description to go along with a square image.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`FacebookPreview matches the snapshot for a too small image 1`] = `
.c5 {
  color: #606770;
  font-size: 12px;
  line-height: 11px;
  text-transform: uppercase;
  overflow: hidden;
}

.c4 {
  color: #606770;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-size: 12px;
  line-height: 16px;
  overflow: hidden;
  padding: 0;
  text-overflow: ellipsis;
  text-transform: uppercase;
  white-space: nowrap;
  margin: 0;
  position: static;
}

.c1 {
  width: 500px;
  height: 261px;
  background-color: #ddd;
  border-style: dashed;
  border-width: 2px;
  color: #073cba;
  background-color: #f1f1f1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  display: block;
  color: #1d2129;
  font-weight: 600;
  overflow: hidden;
  font-size: 16px;
  line-height: 20px;
  margin: 5px 0 0;
  max-height: 100px;
  word-wrap: break-word;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  white-space: normal;
  cursor: pointer;
}

.c8 {
  color: #606770;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-size: 12px;
  line-height: 16px;
  overflow: hidden;
  padding: 0;
  text-overflow: ellipsis;
  text-transform: uppercase;
  white-space: nowrap;
  margin: 3px 0 0 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  background-color: #f2f3f5;
  max-width: none;
  border: none;
  box-shadow: none;
  border: 1px solid #dddfe2;
  border-radius: 0;
  zoom: 1;
  overflow: hidden;
  position: relative;
  z-index: 0;
  width: 500px;
}

.c2 {
  background-color: #f2f3f5;
  margin: 0;
  padding: 10px 12px;
  position: relative;
  border-bottom: 1px solid #dddfe2;
  border-top: 1px solid #dddfe2;
  width: 474px;
  height: 57px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 136px;
  font-size: 12px;
  margin: 0;
  max-height: 190px;
}

.c6 {
  max-height: 46px;
  overflow: hidden;
}

<div
  className="c0"
  mode={null}
>
  <div
    className="c1"
  >
    Select image
  </div>
  <div
    className="c2"
    mode={null}
  >
    <div
      className="c3"
    >
      <span
        className="screen-reader-text"
      >
        yoast.com
      </span>
      <p
        aria-hidden="true"
        className="c4"
      >
        <span
          className="c5"
        >
          yoast.com
        </span>
      </p>
      <div
        className="c6"
      >
        <span
          className="c7"
        >
          YoastCon Workshops
        </span>
        <p
          className="c8"
        >
          Description to go along with too small an image.
        </p>
      </div>
    </div>
  </div>
</div>
`;
